added page navigation script

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             <div class="line"></div>
           </a>
           <ul class="navi animated fadeInRight">
-            <a href="#">Kontakt</a>
-            <a href="#">Galeria</a>
-            <a href="#">Usługi</a>
-            <a href="#">O nas</a>
+            <a href="#contact-sec">Kontakt</a>
+            <a href="#gallery-sec">Galeria</a>
+            <a href="#offer-sec">Usługi</a>
+            <a href="#about-sec">O nas</a>
           </ul>
         </nav>
     </header>
@@ -39,6 +39,8 @@
             </h1>
         </div>
     </div>
+   <main>
+   <section id="about-sec">
     <div class="about-cont">
         <div class="about">
             <h1>O NAS</h1>
@@ -50,7 +52,9 @@
             </div>
         </div>
     </div>
-    <div class="container cont-offer">
+    </section>
+    <section id="offer-sec">
+        <div class="container cont-offer">
         <div class="offer-cl">
             <h1 id="offer">NASZE USŁUGI</h1>
         </div>
@@ -80,14 +84,15 @@
                <div class="col-12 col-md-4 col-sm-6 offer-text">
                <h2>Dermatologia</h2>
                <p>
-            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. /p>
+            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. </p>
             </div>
 
         </div>
 
     </div>
-
-<div class='container gallery'>
+    </section>
+<section id="gallery-sec">
+        <div class='container gallery'>
         <div class="gallery-cl">
             <h1 id="gallery-title">GALERIA</h1>
         </div>
@@ -114,7 +119,8 @@
         </div>
 
     </div>
-
+    </section>
+    <section id="contact-sec">
     <div class="container contact">
         <h1 id="contact_title">KONTAKT</h1>
          <div class="row" id="contact-content">
@@ -133,7 +139,8 @@
             </div>
             </div>
     </div>
-
+    </section>
+</main>
 
 
 <!--mapka 51.978510, 20.831953-->
@@ -170,5 +177,6 @@
         <script type="text/javascript" src="js/jquery-3.2.1.js"></script>
         <script type="text/javascript" src="js/bootstrap.min.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
+        <script type="text/javascript" src="js/jquery.pagenav.js"></script>
     </body>
 </html>
